<resources>
    <string name="app_name">Справочник рыбака</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="main_text_size">Размер главного текста</string>
    <string name="text_settings">Настройки текста</string>
    <string name="fish">Рыба</string>
    <string name="bait">Наживка</string>
    <string name="tackle">Снасти</string>
    <string name="lure">Прикормка</string>
    <string name="stories">Рыбацкие истории</string>
    <string name="advice">Полезные советы</string>
    <string name="fish_1">Карпы (лат. Cyprinus) — род рыб семейства карповых. Большинство видов рода обитают на юге Китая и в Юго-Восточной Азии. Исключение составляют два вида. Первый — обыкновенный сазан (Cyprinus carpio), имевший естественный ареал, состоявший из двух частей: водоемы Понто-Каспийско-Аральского и дальневосточного регионов[1]. Он был расселён в водоёмах Северной Америки, Австралии и Евразии за пределами естественного ареала, одомашнен, из него выведены породы карпа, разводимые в прудах. Второй — серебристый карп, завезенный в 1970-е годы в Канаду и США из озера Балхаш (Казахстан) и сильно размножившийся в отсутствие внешних врагов и отлова (из-за обилия костей американцы его не едят). В случае попадания серебристого карпа в Великие озера это грозит уничтожением промысловых рыб местных пород и исчезновением промыслового рыболовства, поэтому на Чикагском канале построен электрический барьер[2][3][4]. </string>
    <string name="fish_2">Щу́ка[1], или обыкнове́нная щу́ка[1] (лат. Esox lucius), — рыба семейства щуковых. Распространена в пресных водах Евразии,и Северной Америки. Живёт обычно в прибрежной зоне, в водных зарослях, в непроточных или слабопроточных водах. Может также встречаться и в опреснённых частях морей, например в Финском, Рижском и Куршском заливах Балтийского моря, в Таганрогском заливе Азовского моря. Щука хорошо выдерживает кислую реакцию воды, может комфортно жить в водоёмах с pH 4,75. При снижении содержания кислорода до 3,0—2,0 мг/л наступает угнетение дыхания, поэтому в заморных водоёмах щука часто погибает. </string>
    <string name="fish_3">Обыкнове́нный сом[1], или европейский сом (лат. Silurus glanis), — крупная[2] бесчешуйчатая пресноводная рыба семейства сомовых (Siluridae). Длина тела до 5 м, масса до 400 кг[3] (по историческим данным)[4]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 800 кг в XIX веке, в Днепре, Днестре и Одере[5]. Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[6]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[7]. Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов. Окрас в большинстве случаев бурый с оттенками коричнево-зелёного, брюхо белое. В зависимости от мест обитания окрас может меняться от почти чёрного до светло-жёлтого. Иногда встречаются сомы альбиносы. </string>
    <string name="fish_4">Осетро́вые[1] (лат. Acipenseridae) — семейство ценных промысловых рыб из отряда осетрообразных, включающее такие известные виды, как осётр, стерлядь, севрюга, белуга, шип, калуга. Из некоторых видов осетровых рыб добывают деликатесную чёрную икру. Это послужило причиной чрезмерного вылова, который в сочетании с другими факторами привел к тому, что многие виды оказались на грани исчезновения. Осетровых и веслоносовых называют «примитивными рыбами», потому что их морфологические характеристики остаются относительно неизменными с момента появления самых ранних окаменелостей[2][3]. Самым крупным зарегистрированным осетровым считается самка белуги, пойманная в устье Волги в 1827 году, её длина составляла 7,2 м, а вес — 1571 кг. Большинство осетровых — проходные донные животные, которые мигрируют вверх по течению для нереста, но большую часть жизни проводят в дельтах рек и эстуариях. Некоторые виды обитают исключительно в пресноводной среде, в то время как другие в основном обитают в морской среде вблизи прибрежных районов. Осетровые обитают в субтропических, умеренных и субарктических реках, озёрах и береговых линиях Евразии и Северной Америки[4]. </string>
    <string name="fish_5">Нали́м, или обыкнове́нный нали́м (мень[2])[3] (лат. Lota lota) — единственная исключительно пресноводная рыба отряда трескообразных (Gadiformes). Имеет промысловую ценность. Тело удлинённое, невысокое, округлое в передней части и сильно сжатое с боков — в задней. Голова уплощена, её длина превышает максимальную высоту тела. Глаз маленький. Рот большой, полунижний, нижняя челюсть короче верхней. На челюстях и головке сошника имеются мелкие щетинковидные зубы, но на нёбе их нет. На подбородке имеется один непарный усик (составляющий 20—30 % длины головы) и пара усиков на верхней челюсти[6][9]. </string>
    <string name="bait_1">На сегодняшний день червь является самой популярной насадкой. Чаще всего на червя ловят такую рыбу: лещ, карп, карась, пескарь, окунь, сазан, плотва, красноперка и другие виды рыб в своем роде. Из многочисленного количества видов червей для рыбалки подходят далеко не все, к сожалению, мало кто об этом ведает. Самую значимую роль в приманивании рыбы занимает навозный червь, из-за хорошей подвижности и специфического запаха с хорошо выявленной яркой окраски. В большей части навозный червь водится в трухлых, гниющих пнях, навозе, а также встречаются в удобренных либо же хорошо перепаханных садовых землях. Насадка из червя пользуется успехом при любых погодных условиях, даже при морозе навозного червя можно откапать на глубине не более чем 20 – 35 см. И даже если вы захотели запастись червями заранее, то хранить их можно, как и земляных червей в обычной баночке с увлажненным мхом.</string>
    <string name="bait_2">Для рыбалки нужно отбирать зерна максимально крупного размера. Если нет времени самостоятельно готовить насадку, то ее можно приобрести в продуктовом магазине, как было отмечено, отличный вариант купить баночку Bonduelle. Если решите сами приготовить кукурузу для рыбалки, учтите, карп любит проваренную насадку, недоваренная, слишком жесткая кукуруза для ловли не подойдет. ВАЖНО! Для ловли можно использовать свежую кукурузу (молочную) в сыром виде, но на такую насадку будет клевать карп весом до двух килограммов. Что касается снасти, то лучше всего подойдет поплавочная удочка, длина которой в каждом случае подбирается индивидуально с учетом условий предстоящей рыбалки. Единственно потребуется правильно подобрать номер крючка, поскольку он должен максимально прятаться в приманке. </string>
    <string name="bait_3">На самом деле, это совсем незамысловатый инструмент небольших размеров с ручкой из дерева и наконечником из латуни. С боковой стороны на высечке расположен небольшой разрез для продевания крючка, а сам наконечник оснащен острой округлой кромкой. Латунный наконечник имеет вид обычной трубочки разной высоты с донышком внутри. Чем глубже эта трубка наконечника, тем выше получается хлебная гранула. Раньше отыскать подобный инструмент в наших магазинчиках для рыбалки было почти невозможно, но сейчас в некоторых карповых отделах найти высечку все-таки можно. Но, к сожалению не все продавцы знают о том, для чего они нужны. </string>
    <string name="bait_4">Ловля рыбы на рис - это уникальный и малоизвестный метод рыбалки, который практикуется в некоторых регионах мира. Этот способ особенно популярен в Азии, где рис является основным продуктом питания и широко доступен. Метод ловли рыбы на рис возник в сельскохозяйственных регионах, где рисовые поля соседствовали с водоемами. Рыбаки заметили, что рыба охотно клюет на рисовые зерна, и начали использовать их в качестве приманки. </string>
    <string name="tackle_1">Одно из древнейших приспособлений, использовавшееся в рыбной ловле и для натяжения нитей в ткацких станках. Изготовлялось из керамики или камня. Современное рыболовное грузило на леске поплавочной удочки представляет собой кусочек свинца. Часто используется обычная свинцовая дробь, разрезанная до середины. </string>
    <string name="tackle_2">Один из главных составляющих элементов рыболовного комплекта. Служит для насаживания приманки с последующим зацеплением и удержанием рыбы при её подсекании и вываживании. Современные рыболовные крючки изготавливают из нержавеющих или высокоуглеродистых сталей. </string>
    <string name="tackle_3">Любой шнур, предназначенный для ловли рыбы. Служит основой для рыболовных снастей, соединяя все части оснастки в единую снасть. Позволяет забрасывать в водоём снасть с приманкой, подсекать и вываживать рыбу. Различают монофильные лески и многоволоконные. </string>
    <string name="tackle_4">Это искусственная металлическая приманка для ловли хищной рыбы. Конструктивно блесна изготавливается из металлической пластинки, снабжённой одним или несколькими рыболовными крючками, имеет отверстие для крепления к леске. </string>
    <string name="lure_1">Для рыбалки нужно отбирать зерна максимально крупного размера. Если нет времени самостоятельно готовить насадку, то ее можно приобрести в продуктовом магазине, как было отмечено, отличный вариант купить баночку Bonduelle. Если решите сами приготовить кукурузу для рыбалки, учтите, карп любит проваренную насадку, недоваренная, слишком жесткая кукуруза для ловли не подойдет. ВАЖНО! Для ловли можно использовать свежую кукурузу (молочную) в сыром виде, но на такую насадку будет клевать карп весом до двух килограммов. Что касается снасти, то лучше всего подойдет поплавочная удочка, длина которой в каждом случае подбирается индивидуально с учетом условий предстоящей рыбалки. Единственно потребуется правильно подобрать номер крючка, поскольку он должен максимально прятаться в приманке. </string>
    <string name="lure_2">На самом деле, это совсем незамысловатый инструмент небольших размеров с ручкой из дерева и наконечником из латуни. С боковой стороны на высечке расположен небольшой разрез для продевания крючка, а сам наконечник оснащен острой округлой кромкой. Латунный наконечник имеет вид обычной трубочки разной высоты с донышком внутри. Чем глубже эта трубка наконечника, тем выше получается хлебная гранула. Раньше отыскать подобный инструмент в наших магазинчиках для рыбалки было почти невозможно, но сейчас в некоторых карповых отделах найти высечку все-таки можно. Но, к сожалению не все продавцы знают о том, для чего они нужны. </string>
    <string name="lure_3">Ловля рыбы на рис - это уникальный и малоизвестный метод рыбалки, который практикуется в некоторых регионах мира. Этот способ особенно популярен в Азии, где рис является основным продуктом питания и широко доступен. Метод ловли рыбы на рис возник в сельскохозяйственных регионах, где рисовые поля соседствовали с водоемами. Рыбаки заметили, что рыба охотно клюет на рисовые зерна, и начали использовать их в качестве приманки. </string>
    <string name="stories_1">Старый Михаил жил у самого берега моря. Каждое утро он выходил на своей маленькой лодке в открытые воды, надеясь на хороший улов.Однажды море разбушевалось, и волны швыряли лодку, как щепку. Михаил боролся со стихией, крепко держась за весла. Казалось, что море вот-вот поглотит его.Но годы опыта не прошли даром. Михаил знал каждую волну, каждое течение. Он направил лодку умело, используя силу волн себе на пользу.Когда шторм утих, Михаил обнаружил, что его снасти полны рыбы. Море, словно извиняясь за свой гнев, преподнесло ему щедрый дар.Возвращаясь на берег, старый рыбак улыбался. Он понял, что море, как и жизнь, может быть жестоким, но оно всегда вознаграждает тех, кто не сдается и продолжает бороться. </string>
</resources>